--- a/src/waltham/Makefile.am
+++ b/src/waltham/Makefile.am
@@ -13,7 +13,7 @@ EXTRA_DIST = header-preamble.txt serial-preamble.txt deserial-preamble.txt
 AM_CFLAGS = \
 	@GCC_CFLAGS@ @GLIB_CFLAGS@ \
 	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/src/gael \
+	-I$(top_srcdir)/src/marshaller \
 	-I$(top_srcdir)/src/grayley \
 	-I$(top_srcdir)/src \
 	$(NULL)
@@ -22,11 +22,11 @@ lib_LTLIBRARIES = libwalthamclient.la libwalthamserver.la
 
 libwalthamclient_la_LDFLAGS = -version-info 0:0:0 -no-undefined
 libwalthamclient_la_LIBADD = \
-	$(top_builddir)/src/gael/libgael.la
+	$(top_builddir)/src/marshaller/libmarshaller.la
 
 libwalthamserver_la_LDFLAGS = -version-info 0:0:0 -no-undefined
 libwalthamserver_la_LIBADD = \
-	$(top_builddir)/src/gael/libgael.la
+	$(top_builddir)/src/marshaller/libmarshaller.la
 
 common_src = \
 	waltham-connection.c \
