--- a/configure.ac
+++ b/configure.ac
@@ -42,7 +42,7 @@ AC_CONFIG_FILES([Makefile
 		 data/Makefile
 		 include/Makefile
 		 src/Makefile
-		 src/gael/Makefile
+		 src/marshaller/Makefile
 		 src/grayley/Makefile
 		 src/util/Makefile
 		 src/waltham/Makefile
