tests: add an example of client API usage
This adds a new example using the wth_connection APIs.

There is a proper main loop, but the protocol usage is still not thought
out.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,17 @@
-noinst_PROGRAMS = client server
+noinst_PROGRAMS = client server capiex
+
+capiex_LDADD = \
+	@GLIB_LIBS@ \
+	$(top_builddir)/src/util/libwalthamutil.la \
+	$(top_builddir)/src/grayley/libgrayley.la \
+	$(top_builddir)/src/waltham/libwalthamclient.la
+capiex_CFLAGS = \
+	@GLIB_CFLAGS@ \
+	-I$(top_srcdir)/src/grayley/ \
+	-I$(top_srcdir)/src/waltham/ \
+	-I$(top_srcdir)/include/ \
+	-I$(top_srcdir)/src/
+capiex_SOURCES = client-api-example.c
 
 client_LDADD = \
 	@GLIB_LIBS@ \
