Implement wth_connection
Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/src/waltham/Makefile.am
+++ b/src/waltham/Makefile.am
@@ -29,6 +29,8 @@ libwalthamserver_la_LIBADD = \
 	$(top_builddir)/src/gael/libgael.la
 
 common_src = \
+	waltham-connection.c \
+	waltham-connection.h \
 	waltham-object.c \
 	waltham-object.h \
 	$(NULL)
