Drop the old examples
The new ones are similar in functionality and properly use the
waltham API, unlike the old ones.

Rename the new examples to client and server at the same time,
as those names are now free and are more obvious.

Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,32 +1,4 @@
-noinst_PROGRAMS = client server capiex sapiex
-
-capiex_LDADD = \
-	@GLIB_LIBS@ \
-	$(top_builddir)/src/util/libwalthamutil.la \
-	$(top_builddir)/src/grayley/libgrayley.la \
-	$(top_builddir)/src/waltham/libwalthamclient.la
-capiex_CFLAGS = \
-	@GLIB_CFLAGS@ \
-	-I$(top_srcdir)/src/grayley/ \
-	-I$(top_srcdir)/src/waltham/ \
-	-I$(top_srcdir)/include/ \
-	-I$(top_srcdir)/src/
-capiex_SOURCES = client-api-example.c
-
-sapiex_LDADD = \
-	@GLIB_LIBS@ \
-	$(top_builddir)/src/util/libwalthamutil.la \
-	$(top_builddir)/src/grayley/libgrayley.la \
-	$(top_builddir)/src/waltham/libwalthamserver.la
-sapiex_CFLAGS = \
-	@GLIB_CFLAGS@ \
-	-I$(top_srcdir)/src/grayley/ \
-	-I$(top_srcdir)/src/waltham/ \
-	-I$(top_srcdir)/include/ \
-	-I$(top_srcdir)/src/util/ \
-	-I$(top_srcdir)/src/
-sapiex_SOURCES = server-api-example.c \
-	w-util.c
+noinst_PROGRAMS = client server
 
 client_LDADD = \
 	@GLIB_LIBS@ \
@@ -39,7 +11,7 @@ client_CFLAGS = \
 	-I$(top_srcdir)/src/waltham/ \
 	-I$(top_srcdir)/include/ \
 	-I$(top_srcdir)/src/
-client_SOURCES = client.c
+client_SOURCES = client-api-example.c
 
 server_LDADD = \
 	@GLIB_LIBS@ \
@@ -49,6 +21,10 @@ server_LDADD = \
 server_CFLAGS = \
 	@GLIB_CFLAGS@ \
 	-I$(top_srcdir)/src/grayley/ \
+	-I$(top_srcdir)/src/waltham/ \
 	-I$(top_srcdir)/include/ \
-	-I$(top_srcdir)/src/util/
-server_SOURCES = server.c
+	-I$(top_srcdir)/src/util/ \
+	-I$(top_srcdir)/src/
+server_SOURCES = \
+	server-api-example.c \
+	w-util.c
