Rename remaining grayley instances with demarshaller
Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/src/waltham/Makefile.am
+++ b/src/waltham/Makefile.am
@@ -65,7 +65,7 @@ client-deserialice.c: $(core_interface) $(tools) $(srcdir)/deserial-preamble.txt
 		-i $(top_srcdir)/data/command.xml \
 		-o $@ \
 		-m client \
-		-t grayley
+		-t demarshaller
 
 libwalthamclient_la_SOURCES = \
 	$(common_src)
@@ -98,7 +98,7 @@ server-deserialice.c: $(core_interface) $(tools) $(srcdir)/deserial-preamble.txt
 		-i $(top_srcdir)/data/command.xml \
 		-o $@ \
 		-m server \
-		-t grayley
+		-t demarshaller
 
 libwalthamserver_la_SOURCES = \
 	$(common_src)
