Remove varsize.py
And move the two dicts into gen.py.

Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/src/util/Makefile.am
+++ b/src/util/Makefile.am
@@ -6,8 +6,7 @@ BUILT_SOURCES = util_generated.c
 CLEANFILES = $(BUILT_SOURCES)
 
 tools = \
-	$(top_srcdir)/tools/gen.py			\
-	$(top_srcdir)/tools/varsize.py
+	$(top_srcdir)/tools/gen.py
 
 extensions = \
 	$(top_srcdir)/data/command.xml
