Add a per-connection fd
This removes a global fd, allowing clients to talk to multiple
servers and servers to have multiple clients simultaneously.

Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/src/marshaller/Makefile.am
+++ b/src/marshaller/Makefile.am
@@ -1,5 +1,7 @@
 AM_CFLAGS = @GCC_CFLAGS@ @GLIB_CFLAGS@ \
-	-I$(top_srcdir)/include
+	-I$(top_srcdir)/include \
+	-I$(top_srcdir)/src/waltham \
+	$(NULL)
 
 noinst_LTLIBRARIES = libmarshaller.la
 libmarshaller_la_SOURCES = marshaller.c marshaller.h
