Drop unneeded glib flags
Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/src/marshaller/Makefile.am
+++ b/src/marshaller/Makefile.am
@@ -1,4 +1,4 @@
-AM_CFLAGS = @GCC_CFLAGS@ @GLIB_CFLAGS@ \
+AM_CFLAGS = @GCC_CFLAGS@ \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/src/waltham \
 	$(NULL)
