Drop dependency to libwayland
Use the internal waltham-util instead.

Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/src/waltham/Makefile.am
+++ b/src/waltham/Makefile.am
@@ -29,6 +29,9 @@ common_src = \
 	waltham-connection.h \
 	waltham-object.c \
 	waltham-object.h \
+	waltham-private.h \
+	waltham-util.c \
+	waltham-util.h \
 	$(NULL)
 
 tools = \
