tests: drop unnecessary includes and link flags
Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,22 +1,15 @@
 noinst_PROGRAMS = client server
 
 client_LDADD = \
-	$(top_builddir)/src/util/libwalthamutil.la \
 	$(top_builddir)/src/waltham/libwaltham.la
 client_CFLAGS = \
-	-I$(top_srcdir)/src/waltham/ \
-	-I$(top_srcdir)/include/ \
-	-I$(top_srcdir)/src/
+	-I$(top_srcdir)/src/waltham/
 client_SOURCES = client-api-example.c
 
 server_LDADD = \
-	$(top_builddir)/src/util/libwalthamutil.la \
 	$(top_builddir)/src/waltham/libwaltham.la
 server_CFLAGS = \
-	-I$(top_srcdir)/src/waltham/ \
-	-I$(top_srcdir)/include/ \
-	-I$(top_srcdir)/src/util/ \
-	-I$(top_srcdir)/src/
+	-I$(top_srcdir)/src/waltham/
 server_SOURCES = \
 	server-api-example.c \
 	w-util.c
