--- a/src/waltham/Makefile.am
+++ b/src/waltham/Makefile.am
@@ -23,12 +23,12 @@ libwaltham_la_LDFLAGS = -version-info 0:0:0 -no-undefined
 libwaltham_la_LIBADD = @GLIB_LIBS@
 
 common_src = \
+	demarshaller.h \
 	marshaller.c \
 	marshaller.h \
 	marshaller_log.h \
 	message.c \
 	message.h \
-	util.h \
 	waltham-connection.c \
 	waltham-connection.h \
 	waltham-object.c \
