Ship the headers in a directory
So that we can eventually rename the directory to have a Waltham 2.0,
if we ever have to break the API.

Users of the library should #include <waltham-connection.h> rather
than <waltham/waltham-connection.h>, and so on.

Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/data/waltham.pc.in
+++ b/data/waltham.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: Waltham
 Description: Waltham library
 Version: @VERSION@
-Cflags: -I${includedir}
+Cflags: -I${includedir}/waltham
 Libs: -L${libdir} -lwaltham
