--- a/src/waltham/Makefile.am
+++ b/src/waltham/Makefile.am
@@ -98,12 +98,13 @@ nodist_libwaltham_la_SOURCES = \
 	server-serialice.c \
 	server-deserialice.c
 
-include_HEADERS = \
+waltham_includedir = $(includedir)/waltham
+waltham_include_HEADERS = \
 	waltham-connection.h \
 	waltham-object.h \
 	waltham-util.h \
 	$(NULL)
 
-nodist_include_HEADERS = \
+nodist_waltham_include_HEADERS = \
 	waltham-client.h \
 	waltham-server.h
