test: fix distcheck
Generated headers were not found, and w-util.h was not included in the
tar-ball apparently.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,13 +3,18 @@ noinst_PROGRAMS = client server
 client_LDADD = \
 	$(top_builddir)/src/waltham/libwaltham.la
 client_CFLAGS = \
+	-I$(top_builddir)/src/waltham/ \
 	-I$(top_srcdir)/src/waltham/
-client_SOURCES = client-api-example.c
+client_SOURCES = \
+	client-api-example.c \
+	w-util.h
 
 server_LDADD = \
 	$(top_builddir)/src/waltham/libwaltham.la
 server_CFLAGS = \
+	-I$(top_builddir)/src/waltham/ \
 	-I$(top_srcdir)/src/waltham/
 server_SOURCES = \
 	server-api-example.c \
+	w-util.h \
 	w-util.c
