Rename README to README.md, and dist
It's in markdown now.

Make sure we distribute README.md. While add it, ensure TODO too.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,5 @@ SUBDIRS = src include data tools tests
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
 aclocaldir = $(datadir)/aclocal
+
+EXTRA_DIST = README.md TODO
