doc: create groups for server, client and common APIs
Doxygen documentation says you cannot put a function into several
groups, so functions that are part of both server and client API have to
be in a third group.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,10 +1,13 @@
-EXTRA_DIST = doxygen.conf.in
+EXTRA_DIST = \
+	doxygen.conf.in \
+	api_groups.dox
 
 if ENABLE_DOC
 noinst_DATA = html/index.html
 endif
 
 public_API_files = \
+	@top_srcdir@/doc/api_groups.dox \
 	@top_srcdir@/src/waltham/waltham-connection.h \
 	@top_srcdir@/src/waltham/waltham-object.h \
 	@top_srcdir@/src/waltham/waltham-util.h \
