doc: use README as the doxygen front page
This adds the ugly "{#mainpage}" in the heading for the Markdown output,
but it seems to be the only way to get Doxygen use it as the front page
content.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -7,6 +7,7 @@ noinst_DATA = html/index.html
 endif
 
 public_API_files = \
+	@top_srcdir@/README.md \
 	@top_srcdir@/doc/api_groups.dox \
 	@top_srcdir@/src/waltham/waltham-connection.h \
 	@top_srcdir@/src/waltham/waltham-object.h \
