doc: add Usage page
This page just has the links to the two examples and the API groups.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,6 +1,7 @@
 EXTRA_DIST = \
 	doxygen.conf.in \
-	api_groups.dox
+	api_groups.dox \
+	usage.dox
 
 if ENABLE_DOC
 noinst_DATA = html/index.html
@@ -9,6 +10,7 @@ endif
 public_API_files = \
 	@top_srcdir@/README.md \
 	@top_srcdir@/doc/api_groups.dox \
+	@top_srcdir@/doc/usage.dox \
 	@top_srcdir@/src/waltham/waltham-connection.h \
 	@top_srcdir@/src/waltham/waltham-object.h \
 	@top_srcdir@/src/waltham/waltham-util.h \
