doc: add {#mainpage} during build
Remove the ugly string from README.md, and instead add it during build
just for Doxygen.

This makes the Github front page cleaner.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -8,7 +8,7 @@ noinst_DATA = html/index.html
 endif
 
 public_API_files = \
-	@top_srcdir@/README.md \
+	@top_builddir@/doc/mainpage.md \
 	@top_srcdir@/doc/api_groups.dox \
 	@top_srcdir@/doc/usage.dox \
 	@top_srcdir@/src/waltham/waltham-connection.h \
@@ -21,6 +21,14 @@ html/index.html: doxygen.conf $(public_API_files)
 	$(AM_V_GEN)(cat doxygen.conf; \
 	            echo "INPUT= $(public_API_files)"; \
 		   ) | $(DOXYGEN) -
+
+GH_TO_DOX_SUBSTS = \
+	-e 's|^Waltham IPC Library$$|Waltham IPC Library {\#mainpage}|'
+
+@top_builddir@/doc/mainpage.md: @top_srcdir@/README.md
+	$(AM_V_GEN)$(SED) $(GH_TO_DOX_SUBSTS) < $< > $@
+
+CLEANFILES = @top_builddir@/doc/mainpage.md
 
 clean-local:
 	rm -rf html
