Split the XML files into three parts.
Signed-off-by: Emmanuel Gil Peyrot <emmanuel.peyrot@collabora.com>

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,6 +2,8 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = waltham.pc
 
 EXTRA_DIST = \
+	private.xml \
+	public.xml \
 	command.xml \
 	ivi-application.xml \
 	protocol-comparison.txt \
